src/test/ui/regions/regions-close-param-into-object.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:6:5
   |
LL | fn p1<T>(v: T) -> Box<dyn X + 'static>
   |       - help: consider adding an explicit lifetime bound...: `T: 'static`
...
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:12:5
   |
LL | fn p2<T>(v: Box<T>) -> Box<dyn X + 'static>
   |       - help: consider adding an explicit lifetime bound...: `T: 'static`
...
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `std::boxed::Box<T>` will meet its required lifetime bounds

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:18:5
   |
LL | fn p3<'a,T>(v: T) -> Box<dyn X + 'a>
   |          - help: consider adding an explicit lifetime bound...: `T: 'a`
...
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:24:5
   |
LL | fn p4<'a,T>(v: Box<T>) -> Box<dyn X + 'a>
   |          - help: consider adding an explicit lifetime bound...: `T: 'a`
...
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `std::boxed::Box<T>` will meet its required lifetime bounds

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0309, E0310.
For more information about an error, try `rustc --explain E0309`.
